# bible-api

./: .gitignore  Dockerfile  README.md  nuxt.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: index.py  verse.py
api/_bible/: dependencies.py  router.py  schemas.py  service.py  utils.py
api/bible/: dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
src/: app.py  daily_verse.py  dependencies.py  exceptions.py  logger.py  main.py  schemas.py  service.py  utils.py
src/bible/: __init__.py  constants.py  daily_verse.py  dependencies.py  router.py  schemas.py  service.py  utils.py
src/bible_v2/: router.py
